# le_para_mim

./: .gitignore  main.py  pyproject.toml
le_para_mim/: main.py
